--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
 
 <body>
   <app-root></app-root>
+
+  <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
 </body>
 
 </html>
